url: https://www.saucedemo.com/
tags:
  - auth
  - regression
  - negative
---
- launchApp
- assertVisible: "Swag Labs"
- tapOn: "Username"
- inputText: "standard_user"
- tapOn: "Password"
- inputText: ""
- tapOn: "Login"
- assertVisible: "Epic sadface: Password is required"