url: https://www.saucedemo.com/
tags:
  - auth
  - regression
  - negative
---
- launchApp
- assertVisible: "Swag Labs"
- tapOn: "Username"
- inputText: ""
- tapOn: "Password"
- inputText: "secret_sauce"
- tapOn: "Login"
- assertVisible: "Epic sadface: Username is required"