url: https://www.saucedemo.com/
tags:
  - auth
  - smoke
  - positive
---
- launchApp
- assertVisible: "Swag Labs"
- tapOn: "Username"
- inputText: "standard_user"
- tapOn: "Password"
- inputText: "secret_sauce"
- tapOn: "Login"
- assertVisible: "Products"